manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delete-task
  template:
    metadata:
      labels:
        app: delete-task
    spec:
      containers:
      - name: delete-task
        image: todoacr01.azurecr.io/deletetask:v1
        ports:
        - containerPort: 8000
